Modules/_io/_iomodule.c
@@ -346,7 +346,8 @@ _io_open_impl(PyObject *module, PyObject *file, const char *mode,
         goto error;
     }
 
-    if (binary && encoding != NULL) {
+    if (binary && encoding != NULL
+            && strcmp(encoding, "locale") != 0) {
         PyErr_SetString(PyExc_ValueError,
                         "binary mode doesn't take an encoding argument");
         goto error;
